# ds-toolkit

./: .env  .env.sample  .gitignore  README.md  active-dev-healthcare.ipynb  main.py  misc.ipynb  preprocessing.py  pyproject.toml  requirements.txt  simple-linear-regression.py  sklearn-ML.ipynb  spacy-notes.txt
cheatsheets/: correlation-matrix.txt  misc-DS.txt  numpy_cheat_sheet.txt  pandas-DataFrame.txt  pandas-Series.txt  pandas-Settings.txt  torch-Tensor.txt
deep-learning/: bird-plane-conv.ipynb  bird-plane-linear.ipynb  bird-plane.py  dataset.ipynb  neural-network.ipynb  nn-autograd.py  notes.txt  subclass.py
ingestion/data/raw/: c0193e27-f1a4-4698-a6bb-3df772c16256.xml
ingestion/notebooks/: Untitled.ipynb  Untitled.py
ingestion/src/: clean.py  ingest.py
linear_models/: ols.py  slr.py
src/toolkit/: nlp.py  pipeline.py
src/toolkit/drug_label_api/: main.py
src/toolkit/ingestion/: clean.py  ingest.py
src/toolkit/linear_models/: ols.py
src/toolkit/utilities/: misc.py
tests/ingestion/: sample_html.html  sample_html.json  test_clean.py  test_ingest.py
utilities/: misc.py  plotter.py  preprocessing.py
